Fix the position to avoid gaps

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,9 @@ body {
 }
 
 .bg {
-    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
 
